--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
+    "tailwindcss": "^3.4.1",
     "typescript": "^4.9.5",
     "vite": "^4.1.1"
   }
